--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -19,7 +19,7 @@
             <span sec:authorize="isAuthenticated()">
                 | Авторизован пользователь: <span sec:authentication="firstName"></span> |
                 Роль: <span sec:authentication="roles"></span> |
-                <a th:href="@{/logout}">Выйти из аккаунта</a>
+                <a th:href="@{/}">Выйти из аккаунта</a>
             </span>
 
         <script type="text/javascript"
